Added transparent terminals and dmenu support for subtle

--- a/mupen64plus/InputAutoCfg.ini
+++ b/mupen64plus/InputAutoCfg.ini
@@ -38,9 +38,9 @@ Z Trig = button(5)
 B Button = button(1)
 A Button = button(2)
 C Button R = axis(2+)
-C Button L = axis(2-)
+C Button L = axis(2-), button(0)
 C Button D = axis(5+)
-C Button U = axis(5-)
+C Button U = axis(5-), button(3)
 R Trig = button(7)
 L Trig = button(6)
 Mempak switch = key(109)
