--- a/ncmpcpp/config
+++ b/ncmpcpp/config
@@ -1,32 +1,49 @@
-mpd_music_dir = "/home/emily/Music/"  
-mpd_connection_timeout = "5"  
-mpd_crossfade_time = "5"  
-playlist_disable_highlight_delay = "0"  
-playlist_display_mode = "columns"  
-browser_display_mode = "columns"  
-incremental_seeking = "yes"  
-autocenter_mode = "yes"  
-header_visibility = "yes"  
-statusbar_visibility = "yes"  
-fancy_scrolling = "yes"  
-follow_now_playing_lyrics = "yes"  
-display_screens_numbers_on_start = "yes"  
-ignore_leading_the = "yes"  
-lyrics_database = "1"  
-song_columns_list_format = "(10)[blue]{l} (30)[green]{a} (30)[magenta]{b} (50)[yellow]{t}"  
-colors_enabled = "yes"  
-main_window_color = "white"  
-header_window_color = "blue"  
-volume_color = "red"  
-progressbar_color = "blue"  
-statusbar_color = "blue"  
-color1 = "cyan"  
-color2 = "cyan"  
-active_column_color = "cyan"  
-active_window_border = "blue"  
+## MPD SETTINGS
+
+mpd_crossfade_time = "5"
+mpd_music_dir = "/home/emily/Music/"
+
+## USER INTERFACE
+
+#playlist_display_mode = "columns"
+header_visibility = "no"
+titles_visibility = "no"
+centered_cursor = "yes"
+autocenter_mode = "yes"
+cyclic_scrolling = "yes"
+enable_window_title = "yes"
+playlist_disable_highlight_delay = 0
+mouse_support = "no"
+song_list_format = "$8 {%y} %a $9$R$6 %t $9"
+song_columns_list_format = "(7)[cyan]{l} (28)[blue]{a} (65)[magenta]{t}"
+
+## VISUALIZER SETTINGS
+
 visualizer_fifo_path = "/tmp/mpd.fifo"
-visualizer_output_name = "my_fifo"
-visualizer_sync_interval = "1"
-visualizer_type = "wave" (spectrum/wave)
-#visualizer_type = "spectrum" (spectrum/wave)
-visualizer_color = "blue"
+visualizer_type = "spectrum"
+
+## CLOCK SETTINGS
+
+clock_display_seconds = "yes"
+
+## LYRICS
+
+lyrics_directory = "/home/emily/.lyrics/"
+store_lyrics_in_song_dir = "no"
+fetch_lyrics_for_current_song_in_background = "yes"
+
+## EXTERNAL SETTINGS
+
+external_editor = "/usr/bin/vim"
+use_console_editor = "yes"
+
+## COLORS
+
+colors_enabled = "yes"
+visualizer_color = "magenta"
+main_window_color = "white"
+main_window_highlight_color = "black"
+active_column_color = "cyan"
+empty_tag_color = "cyan"
+progressbar_color = "cyan"
+active_window_border = ""
