added colemak keybinds for directions

--- a/homedotfiles/.vimperatorrc
+++ b/homedotfiles/.vimperatorrc
@@ -1,5 +1,7 @@
-map j <down>
-map k <up>
+map k <down>
+map h <up>
+map j <left>
+map l <right>
 highlight Hint::after -append font-size: 11pt
 set hintchars="abcdefghijklmnopqrstuvwxyz"
-set gui=none
+set gui=addons,nobookmarks,nomenu,navigation,tabs
