--- a/ncmpcpp/config
+++ b/ncmpcpp/config
@@ -1,22 +1,22 @@
 mpd_crossfade_time = "0"
-mpd_music_dir = "/media/emily/Audio/"
+mpd_music_dir = "/mnt/media/music/"
 
 
-song_list_format = "{ $8%a $1» $2}{%t} $R$1%b"
-song_status_format = "$8%a $1» $2%t $1» $1%b$8 (%y)$1"
+song_list_format = "{ $8%a $1» $6}{%t} $R$1%b$0"
+song_status_format = "$8%a $1» $2%t $1» $1%b$8 (%y)$0"
 statusbar_color = "white"
-main_window_highlight_color = "red"
+main_window_highlight_color = "magenta"
 header_visibility = "no"
 statusbar_visibility = "no"
 colors_enabled = "yes"
-display_screens_numbers_on_start = "no"
+#display_screens_numbers_on_start = "no"
 now_playing_prefix = "$b" 
 now_playing_suffix = "$/b"
 autocenter_mode = "yes"
 centered_cursor = "yes"
 color1 = "white"
 main_window_color = "white"
-color2 = "red"
+color2 = "magenta"
 progressbar_look = "── "
 titles_visibility = "no"
 mouse_support = "no"
@@ -24,7 +24,15 @@ discard_colors_if_item_is_selected = "yes"
 cyclic_scrolling = "yes"
 
 message_delay_time = "1"
-allow_physical_directories_deletion = "no"
-allow_physical_files_deletion = "no"
-ask_before_clearing_main_playlist = "yes"
+#allow_physical_directories_deletion = "no"
+#allow_physical_files_deletion = "no"
+#ask_before_clearing_main_playlist = "yes"
 playlist_disable_highlight_delay = "1"
+
+#Visualizer settings
+visualizer_fifo_path = "/tmp/mpd.fifo"
+visualizer_output_name = "my_fifo"
+visualizer_sync_interval = "30" 
+visualizer_in_stereo = "yes"
+#visualizer_type = "wave" (spectrum/wave)
+#visualizer_type = "spectrum" (spectrum/wave)
