--- a/ncmpcpp/config
+++ b/ncmpcpp/config
@@ -2,7 +2,7 @@ mpd_crossfade_time = "0"
 mpd_music_dir = "/mnt/media/music/"
 
 
-song_list_format = "{ $8%a $1» $6}{%t} $R$1%b$0"
+song_list_format = "{ $8%a $1» $6}{%t}$0"
 song_status_format = "$8%a $1» $2%t $1» $1%b$8 (%y)$0"
 statusbar_color = "white"
 main_window_highlight_color = "magenta"
