--- a/i3/config
+++ b/i3/config
@@ -13,12 +13,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below. ISO 10646 = Unicode
-font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
-# The font above is very space-efficient, that is, it looks good, sharp and
-# clear in small sizes. However, if you need a lot of unicode glyphs or
-# right-to-left text rendering, you should instead use pango for rendering and
-# chose a FreeType font, such as:
-# font pango:DejaVu Sans Mono 10
+font pango:Neep Medium 10
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -154,3 +149,10 @@ bar {
 for_window [class="Chromium-browser" title="Chromium"] border none
 for_window [class="URxvt"] border none
 for_window [class="Steam"] border none
+
+# Color configs
+# class	border	backgr.	text	indicator
+client.focused	#B45274	#B45274	#1D1E1D	#B45274
+client.focused_inactive	#88877C	#88877C	#1D1E1D	#88877C
+client.unfocused	#1D1E1D	#1D1E1D	#88877C	#1D1E1D
+client.urgent	#7D8876	#7D8876	#1D1E1D	#B45274
