--- a/ncmpcpp/config
+++ b/ncmpcpp/config
@@ -1,6 +1,5 @@
 mpd_crossfade_time = "0"
-mpd_music_dir = "/mnt/media/music/"
-
+mpd_music_dir = "/mnt/mnt/music/"
 
 song_list_format = "{ $8%a $1» $6}{%t}$0"
 song_status_format = "$8%a $1» $2%t $1» $1%b$8 (%y)$0"
@@ -37,3 +36,6 @@ visualizer_sync_interval = "30"
 visualizer_in_stereo = "yes"
 #visualizer_type = "wave" (spectrum/wave)
 #visualizer_type = "spectrum" (spectrum/wave)
+
+#Terminal settings
+enable_window_title = no
