--- a/ncmpcpp/config
+++ b/ncmpcpp/config
@@ -1,41 +1,47 @@
-mpd_crossfade_time = "0"
-mpd_music_dir = "/mnt/mnt/music/"
+####################################################
+## dipilibupap@gmail.com
+## Largely Inspire By crshd and Him .
+####################################################
 
-song_list_format = "{ $8%a $1» $6}{%t}$0"
-song_status_format = "$8%a $1» $2%t $1» $1%b$8 (%y)$0"
-statusbar_color = "white"
-main_window_highlight_color = "magenta"
-header_visibility = "no"
-statusbar_visibility = "no"
-colors_enabled = "yes"
-#display_screens_numbers_on_start = "no"
-now_playing_prefix = "$b" 
+
+# Playlist
+song_columns_list_format = "(6f)[blue]{l} (25)[green]{a} (40)[yellow]{t|f} (30)[red]{b}"
+now_playing_prefix = "$8• "
 now_playing_suffix = "$/b"
+playlist_display_mode = "columns" (classic/columns)
 autocenter_mode = "yes"
 centered_cursor = "yes"
-color1 = "white"
-main_window_color = "white"
-color2 = "magenta"
-progressbar_look = "── "
+
+# Bars
+song_status_format = "$3%a $8• $4%t"
+progressbar_look = "─╼·"
 titles_visibility = "no"
-mouse_support = "no"
+
+# Browser
+browser_playlist_prefix = "$2plist »$9 "
+browser_display_mode = "columns" (classic/columns)
+
+# Colors
 discard_colors_if_item_is_selected = "yes"
-cyclic_scrolling = "yes"
+header_window_color = "white"
+volume_color = "cyan"
+state_line_color = "white"
+state_flags_color = "yellow"
+main_window_color = "white"
+color1 = "default"
+color2 = "green"
+#current_item_prefix = "red"
+#current_item_suffix = "red"
+progressbar_color = "yellow"
+statusbar_color = "white"
+#current_item_inactive_column_prefix = "red"
+#current_item_inactive_column_suffix = "red"
+#visualizer_color = "yellow"
+visualizer_type = "spectrum"
 
-message_delay_time = "1"
-#allow_physical_directories_deletion = "no"
-#allow_physical_files_deletion = "no"
-#ask_before_clearing_main_playlist = "yes"
-playlist_disable_highlight_delay = "1"
-playlist_display_mode = "classic"
-
-#Visualizer settings
-visualizer_fifo_path = "/tmp/mpd.fifo"
-visualizer_output_name = "my_fifo"
-visualizer_sync_interval = "30" 
-visualizer_in_stereo = "yes"
-#visualizer_type = "wave" (spectrum/wave)
-#visualizer_type = "spectrum" (spectrum/wave)
-
-#Terminal settings
-enable_window_title = no
+# Othersl
+song_window_title_format = "MPD: {%a > }{%t}{ [%b{ Disc %d}]}|{%f}"
+search_engine_display_mode = "columns" (classic/columns)
+follow_now_playing_lyrics = "yes"
+mouse_support = "no"
+#display_screens_numbers_on_start = "no"
