Updated a bunch of configs ahead of reinstall

--- a/spacevim/init.toml
+++ b/spacevim/init.toml
@@ -51,6 +51,10 @@ auto-completion-tab-key-behavior = "smart"
 enable = false
 
 [[layers]]
+name = 'checkers'
+enable = false
+
+[[layers]]
 name = 'shell'
 default_position = 'top'
 default_height = '100%'
