Updated compton config

--- a/compton/compton.conf
+++ b/compton/compton.conf
@@ -4,7 +4,7 @@ fading = false;
 fade-in-step = 0.08;
 fade-out-step = 0.08;
 
-inactive-dim = 0.25
+inactive-dim = 0.1
 active-opacity = 1
 inactive-opacity = 1
 
@@ -21,7 +21,7 @@ glx-use-gpushader4 = true;
 mark-wmwin-focused = true;
 paint-on-overlay = false;
 use-ewmh-active-win = true;
-vsync = "opengl-swc";
+vsync = false;
 
 shadow = false;
 clear-shadow = true;
@@ -49,7 +49,7 @@ shadow-exclude = [
 	"class_g = 'Chromium' && argb",
 	"class_g = 'Vivaldi-stable' && argb",
 	"class_g = 'Firefox' && argb",
-	"class_g *= 'dwm'",
+	"name *= 'dwm'",
 	"class_g *= 'dmenu'",
 	"class_g ?= 'maim'",
 	#"!focused",
@@ -71,7 +71,8 @@ blur-background-exclude = [
 	"class_g = 'Firefox' && argb",
 	"class_g = 'conky'",
 	"class_g ?= 'maim'",
-	"class_g ?= 'slop'"
+	"class_g ?= 'slop'",
+	"class_g *= 'dwm'",
 ];
 
 fade-exclude = [
